# clockiPy

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  clocki.py  clockipy.env.example  myvision.md  plan.md  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: clockipy-dev.mdc
.github/workflows/: ci.yml
clockipy/: __init__.py  __main__.py  cli.py  digest.py  env.py  goals.py  orchestrator.py
clockipy/api/: __init__.py  client.py  errors.py
clockipy/reports/: __init__.py  report_generator.py  time_entry.py
clockipy/store/: __init__.py  sqlite.py
clockipy/utils/: __init__.py  date_utils.py  file_utils.py  format_utils.py
docs/: architecture.md  cache.md  cli-reference.md  credentials.md  development.md  goals-and-digest.md  planned-vs-measured.md  troubleshooting.md
docs/agent-memory/: current-plan.md  current-task.json
scripts/: bootstrap_venv.sh
tests/: test_clockipy_functionality.py  test_summary_tables.py
tests/integration/: test_api_client.py  test_api_n_plus_one.py  test_digest.py  test_orchestrator_cache.py  test_store.py
tests/smoke/: test_cli_smoke.py
tests/unit/: test_file_utils.py  test_format_utils_properties.py  test_goals.py  test_logging.py  test_report_output.py  test_timezone.py
