[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clockipy"
version = "0.3.0"
description = "Personal time-analytics CLI on top of Clockify: reports, drift detection, goal burn-down."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Rene Lachmann", email = "rene.lachmann@gmail.com" }]
keywords = ["clockify", "time-tracking", "cli", "productivity", "reporting"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31",
    "tabulate>=0.9",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
    "types-PyYAML",
    "freezegun>=1.5",
]

[project.scripts]
clockipy = "clockipy.cli:main"

[project.urls]
Homepage = "https://github.com/renelachmann/clockiPy"
Issues = "https://github.com/renelachmann/clockiPy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["clockipy*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Pragmatic baseline: catch real bugs + bad imports + obvious smells without
# forcing a sweeping typing-modernization PR on legacy report code. UP/B/SIM
# rules are kept opt-in via pre-commit, not CI.
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # let formatter handle long lines
    "E731",  # lambda assignments are fine in this codebase
    "W293",  # trailing whitespace on blank lines (cosmetic only)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "F401", "F841"]
"clockipy/__main__.py" = ["F401"]  # re-export shim
"clockipy/utils/__init__.py" = ["F401"]  # package re-exports

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "smoke: end-to-end CLI smoke tests (slower, subprocess)",
    "integration: integration tests with mocked HTTP",
]

[tool.coverage.run]
branch = true
source = ["clockipy"]
omit = ["clockipy/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
ignore_missing_imports = true
